charts/gateway-deployment.yml
##write a deployment file for gateway service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: 317884193661.dkr.ecr.eu-west-1.amazonaws.com/isolates:bce6851bc78d10d9195ec6a05e95c0a4271c7660
        ports:
        - containerPort: 8889
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
          requests:
            memory: "256Mi"
            cpu: "500m"
